--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ cache
 packages/contracts-bedrock/deployments/devnetL1
 packages/contracts-bedrock/deployments/anvil
 
+packages/tokamak/contracts-bedrock/deployments/devnetL1
 # vim
 *.sw*
 
