--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ packages/contracts-bedrock/deployments/devnetL1
 packages/contracts-bedrock/deployments/anvil
 
 packages/tokamak/contracts-bedrock/deployments/devnetL1
+packages/contracts-bedrock/deployments/anvil
+
 # vim
 *.sw*
 
