fix nx.json to change default branch

--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,7 @@
 {
-  "defaultBase": "develop",
+  "defaultBase": "main",
   "affected": {
-    "defaultBase": "develop"
+    "defaultBase": "main"
   },
   "implicitDependencies": {
     "nx.json": "*",
