--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,23 @@
 	path = packages/contracts-bedrock/lib/safe-contracts
 	url = https://github.com/safe-global/safe-contracts
 	branch = v1.4.0
+
+[submodule "packages/tokamak/contracts-bedrock/lib/openzeppelin-contracts-upgradeable"]
+	path = packages/tokamak/contracts-bedrock/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "packages/tokamak/contracts-bedrock/lib/openzeppelin-contracts"]
+	path = packages/tokamak/contracts-bedrock/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "packages/tokamak/contracts-bedrock/lib/solmate"]
+	path = packages/tokamak/contracts-bedrock/lib/solmate
+	url = https://github.com/transmissions11/solmate
+[submodule "packages/tokamak/contracts-bedrock/lib/clones-with-immutable-args"]
+	path = packages/tokamak/contracts-bedrock/lib/clones-with-immutable-args
+	url = https://github.com/Saw-mon-and-Natalie/clones-with-immutable-args
+[submodule "packages/tokamak/contracts-bedrock/lib/forge-std"]
+	path = packages/tokamak/contracts-bedrock/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "packages/tokamak/contracts-bedrock/lib/safe-contracts"]
+	path = packages/tokamak/contracts-bedrock/lib/safe-contracts
+	url = https://github.com/safe-global/safe-contracts
+	branch = v1.4.0
