--- a/packages/tokamak/contracts-bedrock/package.json
+++ b/packages/tokamak/contracts-bedrock/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "tsx": "^3.14.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@eth-optimism/contracts-bedrock": "workspace:*"
   }
 }
