--- a/.github/workflows/release-docker-nightly.yml
+++ b/.github/workflows/release-docker-nightly.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Set build args
         id: build_args
         run: |
-          echo ::set-output name=GITDATE::"$(date +%d-%m-%Y)"
-          echo ::set-output name=GITCOMMIT::"$GITHUB_SHA"
+          echo "GITDATE=$(date +%d-%m-%Y)" >> "$GITHUB_OUTPUT"
+          echo "GITCOMMIT=$GITHUB_SHA" >> "$GITHUB_OUTPUT"
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -130,9 +130,9 @@ jobs:
       - name: Set build args
         id: build_args
         run: |
-          echo ::set-output name=GITDATE::"$(date +%d-%m-%Y)"
-          echo ::set-output name=GITVERSION::$(jq -r .version ./${{ matrix.target }}/package.json)
-          echo ::set-output name=GITCOMMIT::"$GITHUB_SHA"
+          echo "GITDATE=$(date +%d-%m-%Y)" >> "$GITHUB_OUTPUT"
+          echo "GITVERSION=$(jq -r .version ./${{ matrix.target }}/package.json)" >> "$GITHUB_OUTPUT"
+          echo "GITCOMMIT=$GITHUB_SHA" >> "$GITHUB_OUTPUT"
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -187,14 +187,77 @@ jobs:
             label: ${{ steps.start-ec2-runner.outputs.label }}
             ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
 
-  chain-mon:
+  runners:
+    name: EC2 Runner
+    needs: [start-runners]
+    runs-on: ubuntu-latest
+    outputs:
+      result: ${{ steps.read.outputs.result }}
+    steps:
+      - uses: cloudposse/github-action-matrix-outputs-read@main
+        id: read
+        with:
+          matrix-step-name: start-runners
+
+  chain-mon-amd64:
     name: Publish ${{ matrix.target }}
-    needs: [start-runners, version]
-    runs-on: ${{ matrix.runner }}
+    needs: [version]
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        runner: [ubuntu-latest, ARM64]
         target: [fault-mon, balance-mon, drippie-mon, wd-mon, replica-mon]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_ACCESS_TOKEN_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN_SECRET }}
+
+      - name: Docker Image Name
+        id: docker-image-name
+        run: |
+          ARCHITECTURE=$(uname -m)
+          if [ "$ARCHITECTURE" = "x86_64" ]; then
+            ARCHITECTURE="amd64"
+          fi
+          if [ "$ARCHITECTURE" = "aarch64" ]; then
+            ARCHITECTURE="arm64"
+          fi
+          echo "docker-image-name=onthertech/titan-${{ matrix.target }}:${{ needs.version.outputs.nightly-docker-tag }}-$ARCHITECTURE" >> "$GITHUB_OUTPUT"
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./ops/docker/Dockerfile.packages
+          target: ${{ matrix.target }}
+          push: true
+          provenance: false
+          tags: ${{ steps.docker-image-name.outputs.docker-image-name }}
+
+  chain-mon-arm64:
+    name: Publish ${{ matrix.target }}
+    needs: [runners, version]
+    runs-on: ${{ fromJson(needs.runners.outputs.result).label[format('{0}', matrix.number)] }}
+    strategy:
+      matrix:
+        include:
+          - number: 0
+            target: fault-mon
+          - number: 1
+            target: balance-mon
+          - number: 2
+            target: drippie-mon
+          - number: 3
+            target: wd-mon
+          - number: 4
+            target: replica-mon
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -235,15 +298,10 @@ jobs:
     strategy:
       matrix:
         number: [0, 1, 2, 3, 4]
-    needs: [start-runners, chain-mon]
+    needs: [runners, chain-mon-arm64]
     runs-on: ubuntu-latest
     if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
     steps:
-      - uses: cloudposse/github-action-matrix-outputs-read@main
-        id: read
-        with:
-          matrix-step-name: start-runners
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -256,19 +314,19 @@ jobs:
         with:
           mode: stop
           github-token: ${{ secrets.ACCESS_TOKEN }}
-          label: ${{ fromJson(steps.read.outputs.result).label[format('{0}', matrix.number)] }}
-          ec2-instance-id: ${{ fromJson(steps.read.outputs.result).ec2-instance-id[format('{0}', matrix.number)] }}
+          label: ${{ fromJson(needs.runners.outputs.result).label[format('{0}', matrix.number)] }}
+          ec2-instance-id: ${{ fromJson(needs.runners.outputs.result).ec2-instance-id[format('{0}', matrix.number)] }}
 
   merge:
     name: Build multi-arch images
-    needs: [version, chain-mon]
+    needs: [version, chain-mon-amd64, chain-mon-arm64]
     runs-on: ubuntu-latest
     strategy:
       matrix:
         target: [fault-mon, balance-mon, drippie-mon, wd-mon, replica-mon]
     steps:
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_ACCESS_TOKEN_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN_SECRET }}
