--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,8 @@ name: build
 
 on:
   push:
-    paths:
-      - 'op-chain-ops/**'
-      - 'packages/**'
+    branches:
+      - main
 
 jobs:
   build:
