--- a/.github/workflows/contract-bedrock-test.yml
+++ b/.github/workflows/contract-bedrock-test.yml
@@ -1,155 +1,163 @@
-name: 'Test contract bedrock'
+name: Contracts Bedrock Workflow
 
 on:
   push:
     branches:
       - main
 
-
 jobs:
   contracts-bedrock-coverage:
     runs-on: ubuntu-latest
     container:
       image: onthertech/titan-ci-builder:latest
-
-    env:
-      FOUNDRY_PROFILE: ci
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Check changed
         run: |
-          cd contracts-bedrock
+          cd ops/check-changed
           pip3 install -r requirements.txt
           python3 main.py "contracts-bedrock,op-node"
 
-      - name: Print forge version
-        run: forge --version
-        working-directory: contracts-bedrock
+      - name: Print Forge Version
+        run: |
+          cd packages/contracts-bedrock
+          forge --version
 
-      - name: Test and generate coverage
-        run: pnpm coverage:lcov
-        working-directory: contracts-bedrock
+      - name: Test and Generate Coverage
+        run: |
+          cd packages/contracts-bedrock
+          pnpm coverage:lcov
+        timeout-minutes: 18
+        env:
+          FOUNDRY_PROFILE: ci
 
-      - name: Upload coverage
-        run: codecov --verbose --clean --flags contracts-bedrock-tests
+      - name: Upload Coverage
+        run: |
+          cd packages/contracts-bedrock
+          codecov --verbose --clean --flags contracts-bedrock-tests
+        env:
+          FOUNDRY_PROFILE: ci
 
   contracts-bedrock-tests:
     runs-on: ubuntu-latest
     container:
       image: onthertech/titan-ci-builder:latest
-
-    env:
-      FOUNDRY_PROFILE: ci
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Check changed
         run: |
-          cd contracts-bedrock
+          cd ops/check-changed
           pip3 install -r requirements.txt
           python3 main.py "contracts-bedrock,op-node"
 
-      - name: Print forge version
-        run: forge --version
-        working-directory: contracts-bedrock
+      - name: Print Forge Version
+        run: |
+          cd packages/contracts-bedrock
+          forge --version
 
-      - name: Run tests
-        run: pnpm test
-        working-directory: contracts-bedrock
+      - name: Run Tests
+        run: |
+          cd packages/contracts-bedrock
+          pnpm test
+        timeout-minutes: 15
+        env:
+          FOUNDRY_PROFILE: ci
 
   contracts-bedrock-checks:
     runs-on: ubuntu-latest
     container:
       image: onthertech/titan-ci-builder:latest
-
-    env:
-      FOUNDRY_PROFILE: ci
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Restore PNPM Package Cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: pnpm-packages-v2-${{ hashFiles('pnpm-lock.yaml') }}
-
+        run: |
+          pnpm install -g pnpm
+          pnpm install --frozen-lockfile --prefer-offline
       - name: Check changed
         run: |
-          cd contracts-bedrock
+          cd ops/check-changed
           pip3 install -r requirements.txt
           python3 main.py "contracts-bedrock,op-node"
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline
+      - name: Install Dependencies
+        run: |
+          pnpm install --frozen-lockfile --prefer-offline
 
-      - name: Build contracts
-        run: pnpm build
-        working-directory: contracts-bedrock
+      - name: Build Contracts
+        run: |
+          pnpm build
+        working-directory: packages/contracts-bedrock
 
       - name: Lint
         run: |
           pnpm lint:check || echo "export LINT_STATUS=1" >> "$BASH_ENV"
-        working-directory: contracts-bedrock
+        working-directory: packages/contracts-bedrock
 
-      - name: Gas snapshot
+      - name: Gas Snapshot
         run: |
           forge --version
           pnpm gas-snapshot --check || echo "export GAS_SNAPSHOT_STATUS=1" >> "$BASH_ENV"
-        working-directory: contracts-bedrock
+        env:
+          FOUNDRY_PROFILE: ci
+        working-directory: packages/contracts-bedrock
+        timeout-minutes: 15
 
-      - name: Storage snapshot
+      - name: Storage Snapshot
         run: |
           pnpm storage-snapshot
           git diff --exit-code .storage-layout || echo "export STORAGE_SNAPSHOT_STATUS=1" >> "$BASH_ENV"
-        working-directory: contracts-bedrock
+        working-directory: packages/contracts-bedrock
 
-      - name: Semver lock
+      - name: Semver Lock
         run: |
           pnpm semver-lock
           git diff --exit-code semver-lock.json || echo "export SEMVER_LOCK_STATUS=1" >> "$BASH_ENV"
-        working-directory: contracts-bedrock
+        working-directory: packages/contracts-bedrock
 
-      - name: Invariant docs
+      - name: Invariant Docs
         run: |
           pnpm autogen:invariant-docs
           git diff --exit-code ./invariant-docs/*.md || echo "export INVARIANT_DOCS_STATUS=1" >> "$BASH_ENV"
-        working-directory: contracts-bedrock
+        working-directory: packages/contracts-bedrock
 
-      - name: Check deploy configs
-        run: pnpm validate-deploy-configs || echo "export DEPLOY_CONFIGS_STATUS=1" >> "$BASH_ENV"
-        working-directory: contracts-bedrock
+      - name: Check Deploy Configs
+        run: |
+          pnpm validate-deploy-configs || echo "export DEPLOY_CONFIGS_STATUS=1" >> "$BASH_ENV"
+        working-directory: packages/contracts-bedrock
 
-      - name: Check statuses
+      - name: Check Statuses
         run: |
           if [[ "$LINT_STATUS" -ne 0 ]]; then
+            FAILED=1
             echo "Linting failed, see job output for details."
-            exit 1
           fi
           if [[ "$GAS_SNAPSHOT_STATUS" -ne 0 ]]; then
+            FAILED=1
             echo "Gas snapshot failed, see job output for details."
-            exit 1
           fi
           if [[ "$STORAGE_SNAPSHOT_STATUS" -ne 0 ]]; then
             echo "Storage snapshot failed, see job output for details."
-            exit 1
+            FAILED=1
           fi
           if [[ "$SEMVER_LOCK_STATUS" -ne 0 ]]; then
             echo "Semver lock failed, see job output for details."
-            exit 1
+            FAILED=1
           fi
           if [[ "$INVARIANT_DOCS_STATUS" -ne 0 ]]; then
             echo "Invariant docs failed, see job output for details."
-            exit 1
+            FAILED=1
           fi
           if [[ "$DEPLOY_CONFIGS_STATUS" -ne 0 ]]; then
             echo "Deploy config check failed, see job output for details."
+            FAILED=1
+          fi
+          if [[ "$FAILED" -ne 0 ]]; then
             exit 1
           fi
 
@@ -157,18 +165,17 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: onthertech/titan-ci-builder:latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Check changed
         run: |
-          cd contracts-bedrock
+          cd ops/check-changed
           pip3 install -r requirements.txt
           python3 main.py "contracts-bedrock"
 
-      - name: Slither
+      - name: Run Slither
         run: |
           slither --version && pnpm slither || echo "Slither failed"
 
@@ -176,26 +183,26 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: onthertech/titan-ci-builder:latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Restore PNPM Package Cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: pnpm-packages-v2-${{ hashFiles('pnpm-lock.yaml') }}
+        run: |
+          pnpm install -g pnpm
+          pnpm install --frozen-lockfile --prefer-offline
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline
+      - name: Install Dependencies
+        run: |
+          pnpm install --frozen-lockfile --prefer-offline
 
       - name: Check changed
         run: |
-          cd contracts-bedrock
+          cd ops/check-changed
           pip3 install -r requirements.txt
           python3 main.py "contracts-bedrock"
 
-      - name: Validate spacers
-        run: pnpm validate-spacers
-        working-directory: contracts-bedrock
+      - name: Validate Spacers
+        run: |
+          cd packages/contracts-bedrock
+          pnpm validate-spacers
