--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ crytic-export
 # Ignore local script testing files
 packages/tokamak/contracts-bedrock/upgrade*
 packages/tokamak/contracts-bedrock/deploy.sh
+
+migrations/
