--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,31 @@ name: 'test'
 on:
   push:
 jobs:
+  pnpm-monorepo:
+    runs-on: ubuntu-latest
+    container:
+      image: onthertech/titan-ci-builder:latest
+    steps:
+    - uses: actions/checkout@v4.1.0
+    - name: restore_cache
+      uses: actions/cache@v3.3.2
+      with:
+        key: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
+        path: node_modules
+        restore-keys: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
+    - name: Fetch dependencies
+      run: pnpm fetch --frozen-lockfile --prefer-offline
+    - name: Install dependencies
+      run: pnpm install --frozen-lockfile --offline
+    - name: print forge version
+      run: forge --version
+    - name: Build monorepo
+      run: pnpm build
+    - uses: actions/upload-artifact@v4.0.0
+      with:
+        path: |-
+          ./packages/**/dist
+          ./packages/contracts-bedrock/forge-artifacts
   contracts-bedrock-tests:
     runs-on: ubuntu-latest
     container:
