--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ jobs:
       image: onthertech/titan-ci-builder:latest
     steps:
     - uses: actions/checkout@v4.1.0
+     # Declares the repository safe and not under dubious ownership.
+    - name: Add repository to git safe directories
+      run: git config --global --add safe.directory $GITHUB_WORKSPACE
     - name: restore_cache
       uses: actions/cache@v3.3.2
       with:
