--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -7,18 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: onthertech/titan-ci-builder:latest
-    env:
-      file: go.sum
-      key: gomod
     steps:
     - uses: actions/checkout@v4.1.0
-    - name: Restore cache
-      uses: actions/cache@v3.3.2
-      with:
-        key: ${{ env.key }}-{{ checksum "${{ env.file }}" }}
-        path: "/go/pkg/mod"
-    - name: Download Go module dependencies
-      run: go mod download
+    - name: Setup Go
+      uses: actions/setup-go@v4
   go-mod-tidy:
     runs-on: ubuntu-latest
     container:
@@ -29,11 +21,8 @@ jobs:
     - uses: actions/checkout@v4.1.0
     - name: Add repository to git safe directories
       run: git config --global --add safe.directory $GITHUB_WORKSPACE
-    - name: Restore cache
-      uses: actions/cache@v3.3.2
-      with:
-        key: gomod-{{ checksum "go.sum" }}
-        path: "/go/pkg/mod"
+    - name: Setup Go
+      uses: actions/setup-go@v4
 
     - name: Go mod tidy
       run: make mod-tidy && git diff --exit-code
@@ -47,39 +36,20 @@ jobs:
     - uses: actions/checkout@v4.1.0
     - name: Print golangci-lint version
       run: golangci-lint --version
-    - name: Restore cache
-      uses: actions/cache@v3.3.2
+    - name: Setup Go
+      uses: actions/setup-go@v4
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
       with:
-        key: gomod-{{ checksum "go.sum" }}
-        path: "/go/pkg/mod"
-    - name: Restore build cache
-      uses: actions/cache@v3.3.2
-      with:
-        key: golang-build-cache
-        path: "/root/.cache/go-build"
-    - name: Restore golangci-lint cache
-      uses: actions/cache@v3.3.2
-      with:
-        key: golang-lint-cache
-        path: "/root/.cache/golangci-lint"
-    - name: Print Golang version
-      run: go version
-    - name: Run lint-go
-      run: |-
-        # Identify how many cores it defaults to
-        golangci-lint --help | grep concurrency
-        make lint-go
-      env:
-        GOFLAGS: "-buildvcs=false"
+        version: v1.54
+        args: -E goimports,sqlclosecheck,bodyclose,asciicheck,misspell,errorlint --timeout 5m -e "errors.As" -e "errors.Is" ./...
+    # - name: Run lint-go
+    #   run: |-
+    #     # Identify how many cores it defaults to
+    #     golangci-lint --help | grep concurrency
+    #     make lint-go
+    #   env:
+    #     # need to set -buildevcs=false to ignore the typecheck error
+    #     GOFLAGS: "-buildvcs=false"
 
-      working-directory: "."
-    - name: Save cache
-      uses: actions/cache@v3
-      with:
-        key: golang-build-cache
-        path: "/root/.cache/go-build"
-    - name: Save golang-lint cache
-      uses: actions/cache@v3
-      with:
-        key: golang-lint-cache
-        path: "/root/.cache/golangci-lint"
+    #   working-directory: "."
