--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -102,7 +102,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      - name: Add repository to git safe directories
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
       - name: Check changes
         uses: "./.github/actions/check-changed"
         with:
