--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -37,17 +37,6 @@ jobs:
       - name: Print forge version
         run: forge --version
 
-      - name: Build monorepo
-        run: pnpm build
-
-      - name: Persist to workspace
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-artifacts
-          path: |
-            packages/**/dist
-            packages/contracts-bedrock/forge-artifacts
-
   js-lint-test:
     runs-on: ubuntu-latest
     needs: [pnpm-monorepo]
@@ -108,10 +97,6 @@ jobs:
         uses: "./.github/actions/check-changed"
         with:
           patterns: "${{ env.package_name }},${{ env.dependencies }}"
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          path: "."
       - name: Restore PNPM Package Cache
         uses: actions/cache@v3
         with:
@@ -127,8 +112,7 @@ jobs:
         working-directory: packages/${{ env.package_name }}
 
       - name: Test
-        run: |
-          ls -a
+        run:
           pnpm test:coverage
         working-directory: packages/${{ env.package_name }}
 
