--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -88,17 +88,21 @@ jobs:
         uses: actions/checkout@v3
       - name: Add repository to git safe directories
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
-      - name: Check changes
-        uses: "./.github/actions/check-changed"
-        with:
-          patterns: "${{ env.package_name }},${{ env.dependencies }}"
+
       - name: Restore PNPM Package Cache
         uses: actions/cache@v3
         with:
           path: node_modules
           key: pnpm-packages-v2-${{ hashFiles('pnpm-lock.yaml') }}
 
-
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            packages:
+              - 'packages/**'
+      - if: steps.changes.outputs.packages == 'true'
+        run: echo 'hello'
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --prefer-offline
 
