--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -3,7 +3,7 @@ name: Check JS lint
 on:
   push:
     paths:
-
+      - '**/*.{ts,js}'
 jobs:
   pnpm-monorepo:
     runs-on: ubuntu-latest
@@ -60,18 +60,15 @@ jobs:
           },
           {
             name: 'chain-mon-tests',
-            package_name: 'packages/chain-mon',
-            dependencies: '(common-ts|contracts-bedrock|core-utils|sdk)'
+            package_name: 'packages/chain-mon'
           },
           {
             name: 'contracts-ts-tests',
-            package_name: 'packages/contracts-ts',
-            dependencies: '(contracts-bedrock|contracts-ts)'
+            package_name: 'packages/contracts-ts'
           },
           {
             name: 'sdk-next-tests',
-            package_name: 'packages/sdk',
-            dependencies: '(common-ts|contracts-bedrock|core-utils)'
+            package_name: 'packages/sdk'
           }
         ]
 
@@ -97,10 +94,12 @@ jobs:
         with:
           filters: |
             packages:
-              - "${{ env.package_name }}/**"
-      - if: steps.changes.outputs.packages == 'true'
+              - "${{ env.package_name }}/**.(js|ts)"
+            package.json:
+              - 'package.json'
+      - if: steps.changes.outputs.packages == 'true' || steps.changes.outputs.package.json == 'true'
         run: |
           pnpm install --frozen-lockfile --prefer-offline
-          cd packages/${{ env.package_name }}
+          cd ${{ env.package_name }}
           pnpm lint && git diff --exit-code
 
