--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -50,10 +50,14 @@ jobs:
       id: filter
       with:
         filters: |
-          common-ts: packages/common-ts/**.ts
-          core-utils: packages/core-utils/**.ts
-          contract-ts: packages/contract-ts/**.ts
-          sdk: packages/sdk/**.ts
+          common-ts:
+            - "packages/common-ts/**.ts"
+          core-utils:
+            - "packages/core-utils/**.ts"
+          contract-ts:
+            - "packages/contract-ts/**.ts"
+          sdk:
+            - "packages/sdk/**.ts"
 
   js-lint-test:
     runs-on: ubuntu-latest
