--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -54,7 +54,7 @@ jobs:
             - "packages/common-ts/**.ts"
           core-utils:
             - "packages/core-utils/**.ts"
-          contract-ts:
+          contracts-ts:
             - "packages/contracts-ts/**.ts"
           sdk:
             - "packages/sdk/**.ts"
