--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -51,13 +51,13 @@ jobs:
       with:
         filters: |
           common-ts:
-            - "packages/common-ts/**.ts"
+            - 'packages/common-ts/**.ts'
           core-utils:
-            - "packages/core-utils/**.ts"
+            - 'packages/core-utils/**.ts'
           contracts-ts:
-            - "packages/contracts-ts/**.ts"
+            - 'packages/contracts-ts/**.ts'
           sdk:
-            - "packages/sdk/**.ts"
+            - 'packages/sdk/**.ts'
 
   js-lint-test:
     runs-on: ubuntu-latest
