--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -7,11 +7,10 @@ on:
 jobs:
   changes:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
     outputs:
       packages: ${{ steps.filter.outputs.changes }}
     steps:
+    - uses: actions/checkout@v3
     - uses: dorny/paths-filter@v2
       id: filter
       with:
@@ -25,7 +24,6 @@ jobs:
           sdk:
             - 'packages/sdk/**'
             - name: Checkout
-            uses: actions/checkout@v3
     - name: Echo JSON
       run: echo ${{ toJson(steps.filter.outputs.changes)}}
     # Declares the repository safe and not under dubious ownership.
