--- a/.github/workflows/js-lint.yml
+++ b/.github/workflows/js-lint.yml
@@ -56,6 +56,7 @@ jobs:
 
   js-lint-test:
     runs-on: ubuntu-latest
+    if: needs.changes.outputs.packages != '[]'
     needs: [changes]
     container:
       image: onthertech/titan-ci-builder:latest
