--- a/.github/workflows/publish-tokamak-packages.yml
+++ b/.github/workflows/publish-tokamak-packages.yml
@@ -52,7 +52,7 @@ jobs:
           # Define the package names to publish
           PACKAGES_TO_PUBLISH=("@tokamak-network/titan2-sdk @tokamak-network/titan2-contracts")
           # Set the output variables for packages to publish
-          echo "::set-output name=packages-to-publish::${PACKAGES_TO_PUBLISH[@]}"
+          echo "packages-to-publish=${PACKAGES_TO_PUBLISH[@]}" >> $GITHUB_OUTPUT
 
       - name: Print Git changes
         run: git diff
